add  ValidatorCompanyDtoTest.validateNullName()